# jenkins-job-insight

./: .coderabbit.yaml  .dockerignore  .env.example  .flake8  .gitignore  .gitleaks.toml  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  OWNERS  README.md  config.example.toml  docker-compose.yaml  entrypoint.sh  package-lock.json  pyproject.toml  tox.toml
docs/: adding-peer-review-with-multiple-ai-models.html  adding-peer-review-with-multiple-ai-models.md  ai-provider-setup.html  ai-provider-setup.md  analyze-a-jenkins-job.html  analyze-a-jenkins-job.md  analyze-jenkins-jobs.html  analyze-jenkins-jobs.md  analyze-your-first-jenkins-job.html  analyze-your-first-jenkins-job.md  analyzing-jenkins-jobs.html  analyzing-jenkins-jobs.md  analyzing-junit-xml-and-raw-failures.html  analyzing-junit-xml-and-raw-failures.md  api-overview.html  api-overview.md  api-post-analyze-failures.html  api-post-analyze-failures.md  api-post-analyze.html  api-post-analyze.md  api-results-and-dashboard.html  api-results-and-dashboard.md  api-schemas-and-models.html  api-schemas-and-models.md  architecture-and-project-structure.html  architecture-and-project-structure.md  cli-command-reference.html  cli-command-reference.md  configuration-and-environment-reference.html  configuration-and-environment-reference.md  configuration-reference.html  configuration-reference.md  configure-your-profile-and-notifications.html  configure-your-profile-and-notifications.md  container-deployment.html  container-deployment.md  copy-common-analysis-recipes.html  copy-common-analysis-recipes.md  copy-common-deployment-recipes.html  copy-common-deployment-recipes.md  (+67 more)
examples/junit_xml_enricher/: enrich_junit_xml.py
examples/pytest-junitxml/: conftest_junit_ai.py  conftest_junit_ai_utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
tests/: __init__.py  conftest.py  test_ai.py  test_ai_models.py  test_allow_list.py  test_analyzer.py  test_api_notifications.py  test_api_token_usage.py  test_auth.py  test_bug_creation.py  test_cli_client.py  test_cli_config.py  test_cli_main.py  test_cli_output.py  test_comment_enrichment.py  test_comment_intent.py  test_comments.py  test_config.py  test_debug_request_logging.py  test_diagnostic_archive.py  test_encryption.py  test_enrich_junit_xml.py  test_feedback.py  test_github_issues.py  test_history.py  test_html_report.py  test_issue_matching.py  test_jenkins.py  test_jenkins_archive.py  test_jenkins_artifacts.py  test_jira.py  test_job_metadata.py  test_llm_pricing.py  test_logging_context.py  test_main.py  test_mentions.py  test_metadata_rules.py  test_models.py  test_monitoring.py  test_notifications.py  (+13 more)
(+156 files in other folders)
